--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@
 						<div class="col-sm-2 col-3 text-right"><i class="fas fa-store-alt"></i></i></div>
 						<div class="col-sm-10 col-9 mb-3">Address.....<br>Address..... <br>Address.....<br>Address..... </div>
 					</div>
-					<div class="text-center text-lg-left">
+					<div class="text-center text-lg-left pb-2">
 						<a href="#" class="btn btn-success py-1 px-1 ml-sm-2 mx-2 mt-1"><i class="fab fa-whatsapp"></i> WhatsApp</a>
 						<a href="#" class="btn btn-light py-1 px-1 ml-sm-2 mx-2 mt-1"><i class="fas fa-map-marker-alt"></i> Location</a>
 						<a href="#" class="btn btn-primary py-1 px-1 ml-sm-2 mx-2 mt-1"><i class="fas fa-phone-alt"></i> Call Us</a>
