--- a/products.html
+++ b/products.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Prerana Enterprises</title>
+	<title>Prerana Enterprises | About Us</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8" />
@@ -11,7 +11,7 @@
 
 
 	<!--whatsapp and fb-->
-	<meta property="og:title" content="Prerana Enterprises" />
+	<meta property="og:title" content="Prerana Enterprises | About Us" />
 	<meta property="og:description" content="" />
 	<meta property="og:url" content="" />
 	<meta property="og:type" content="website" />
@@ -23,7 +23,7 @@
 
 	<!--twitter-->
 	<meta property="twitter:card" content="summary_large_image" />
-	<meta property="twitter:title" content="Prerana Enterprises" />
+	<meta property="twitter:title" content="Prerana Enterprises | About Us" />
 	<meta property="twitter:description" content="" />
 	<meta property="twitter:image" content="" />
 
@@ -54,23 +54,6 @@
 
 	<script type="text/javascript">
 		function dyheight() {
-			let hlist = document.getElementsByClassName('test');
-			max = hlist[0].clientHeight;
-			for(var i=1; i<hlist.length; i++)
-			{
-				if(hlist[i].clientHeight>max)
-				{
-					max=hlist[i].clientHeight;
-				}
-			}
-			for(var i=0; i<hlist.length; i++)
-			{
-				hlist[i].style.top = (max/2)+'px';
-				hlist[i].style.marginTop = (-hlist[i].clientHeight/2)+'px';
-			}
-			document.getElementById('t1').style.height = max+'px';
-
-			document.getElementById('photo-stack').style.height = (document.getElementById('stack-pics').clientHeight + 10)+'px';
 			document.getElementById('footer-image').style.width = document.getElementById('footer-image-div').offsetWidth+'px';
 			document.getElementById('footer-image-div').style.height = document.getElementById('footer-image').clientHeight+'px';
 			document.getElementById('footer-image-div').style.marginTop = ((document.getElementById('footer-3').offsetHeight - document.getElementById('footer-image').clientHeight)/2)+'px';
@@ -132,18 +115,12 @@
 			</label>
 			<a href="#"><img src="images/logo.png" alt="Prerana Enterprises"></a>
 			<ul>
-				<li class="active" id="active"><a href="javascript: void(0)"><i class="fas fa-home"></i> Home</a></li>
+				<li><a href="#"><i class="fas fa-home"></i> Home</a></li>
 				<li><a href="#"><i class="fas fa-file-contract"></i> About Us</a></li>
-				<li><a href="#"><i class="fas fa-box-open"></i> Our Products</a></li>
+				<li class="active" id="active"><a href="javascript: void(0)"><i class="fas fa-box-open"></i> Our Products</a></li>
 				<li><a href="#"><i class="far fa-address-card"></i> Contact Us</a></li>
 			</ul>
 		</nav>
-		<!--
-		<br>
-		<div class="text-center container">
-			<h1 class="banner-name"><b>PRERANA ENTERPRISES</b></h1>
-		</div>
-	-->
 
 	</div>
 
@@ -156,116 +133,19 @@
 	<div class="click text-center" onclick="slidein();" id="click">Contact Us</div>
 	<div class="bait" id="bait">Lorem<br>lorem<br>lorem<br>lorem</div>
 
-<h2 class="text-center subname pt-5 pb-md-5 pb-4" id="proud-client">Our Proud Clients</h2>
-
-<div class="proud pb-4">
-	<div class="t1" id="t1">
-
-		<div class="a1">
-			<img src="images/logo.png" class="test" alt="Prerana Enterprises" onload="dyheight();">
-			<img src="images/longlogo.jpg" class="test" alt="Prerana Enterprises" onload="dyheight();">
-			<img src="images/logo.png" class="test" alt="Prerana Enterprises" onload="dyheight();">
-			<img src="images/logo.png" class="test" alt="Prerana Enterprises" onload="dyheight();">
-		</div>
-		<div class="a2">
-			<img src="images/logo.png" class="test" alt="Prerana Enterprises" onload="dyheight();">
-			<img src="images/logo.png" class="test" alt="Prerana Enterprises" onload="dyheight();">
-			<img src="images/logo.png" class="test" alt="Prerana Enterprises" onload="dyheight();">
-			<img src="images/logo.png" class="test" alt="Prerana Enterprises" onload="dyheight();">
-		</div>
-		<div class="a3">
-			<img src="images/logo.png" class="test" alt="Prerana Enterprises" onload="dyheight();">
-			<img src="images/logo.png" class="test" alt="Prerana Enterprises" onload="dyheight();">
-			<img src="images/logo.png" class="test" alt="Prerana Enterprises" onload="dyheight();">
-			<img src="images/logo.png" class="test" alt="Prerana Enterprises" onload="dyheight();">
-		</div>
-		<div class="a4">
-			<img src="images/logo.png" class="test" alt="Prerana Enterprises" onload="dyheight();">
-			<img src="images/logo.png" class="test" alt="Prerana Enterprises" onload="dyheight();">
-			<img src="images/logo.png" class="test" alt="Prerana Enterprises" onload="dyheight();">
-			<img src="images/logo.png" class="test" alt="Prerana Enterprises" onload="dyheight();">
-		</div>
-
-	</div>
-	<div class="container text-right mt-md-5 mt-4"><p class="text-justify home-happy">We are happy to serve many more food, consumer goods and edible oil industries across Ratnagiri, Raigad, Panvel and Navi Mumbai.</p><a href="#" class="btn btn-primary review-btn">Read Reviews</a></div>
-
-</div>
-
-<h2 class="text-center subname pt-3 pb-md-4 pb-4">Our Primary Goals</h2>
-<div class="container home-goal pb-4 text-success">
-	<div class="row">
-		<div class="col-lg-6 col-12">
-			<div class="row">
-				<div class="col-1 text-right mx-0 px-0"><i class="fas fa-thumbs-up"></i></div>
-				<div class="col-11 text-justify pb-2">Provide high-quality, reliable corrugated boxes.</div>
-			</div>
-		</div>
-		<div class="col-lg-6 col-12">
-			<div class="row">
-				<div class="col-1 text-right mx-0 px-0"><i class="fas fa-rupee-sign"></i></div>
-				<div class="col-11 text-justify pb-2">Provide affordable solutions to clients.</div>
-			</div>
-		</div>
-
-		<div class="col-lg-6 col-12">
-			<div class="row">
-				<div class="col-1 text-right mx-0 px-0"><i class="fas fa-handshake"></i></div>
-				<div class="col-11 text-justify pb-2">Create and cultivate long-term relationship with clients.</div>
-			</div>
-		</div>
-		<div class="col-lg-6 col-12">
-			<div class="row">
-				<div class="col-1 text-right mx-0 px-0"><i class="fas fa-bolt"></i></div>
-				<div class="col-11 text-justify pb-2">Respond immediately to the changing needs of our clients.</div>
-			</div>
-		</div>
-		<div class="col-lg-6 col-12">
-			<div class="row">
-				<div class="col-1 text-right mx-0 px-0"><i class="fas fa-smile"></i></div>
-				<div class="col-11 text-justify pb-2">Achieve complete customer satisfaction.</div>
-			</div>
-		</div>
-		<div class="col-lg-6 col-12">
-			<div class="row">
-				<div class="col-1 text-right mx-0 px-0"><i class="fas fa-chart-line"></i></div>
-				<div class="col-11 text-justify pb-2">Improve our services continuously.</div>
-			</div>
-		</div>
-		<div class="col-lg-6 col-12">
-			<div class="row">
-				<div class="col-1 text-right mx-0 px-0"><i class="fas fa-comments"></i></div>
-				<div class="col-11 text-justify">Encourage communication to achieve the highest standard of performance.</div>
-			</div>
-		</div>
-		<div class="col-lg-6 col-12">
-			<div class="row">
-				<div class="col-1 text-right mx-0 px-0"><i class="far fa-question-circle"></i></div>
-				<div class="col-11 text-justify">Resolve all queries of customers.</div>
-			</div>
-		</div>
-	</div>
-</div>
 
 
-<h2 class="text-center subname pt-3 pb-md-5 pb-4">More About Us</h2>
 
-<div class="row home-product text-center pb-5">
-	<div class="col-md-5 col-12">
-		<div class='photo-stack' id="photo-stack">
-		  <img src='http://placekitten.com/300/200' class="stack-pics" id="stack-pics" onload="dyheight();">
-		  <img src='http://placekitten.com/300/200?image=2' class="stack-pics" id="stack-pics">
-		  <img src='http://placekitten.com/300/200?image=3' class="stack-pics">
-		  <img src='http://placekitten.com/300/200?image=4' class="stack-pics">
-		  <img src='http://placekitten.com/300/200?image=5' class="stack-pics">
-		</div>
-	</div>
-	<div class="col-md-7 col-12">
-		<div class="home-profile-info text-justify mr-md-4 ml-md-0 mx-3 pt-md-0 pt-2">
-			<p>Prerana Enterprises is an extremely innovative company that is always open to fresh ideas. We are always looking at new ways to improve our operations and the process.</p><p class="mb-2">We understand the challenges faced by our clients and assist them in developing the ideas that would work efficiently for their unique needs and would fit in with their budget.</p>
-			<div class="mr-sm-5 text-right mt-0"><a href="#" class="py-1 btn btn-dark home-profile-info">More About Us!</a></div>
-		</div>
-	</div>
-</div>
+
+
+
+
+
+
+
+
+
+
 
 
 <footer class="footer" id="full-footer">
@@ -380,13 +260,6 @@
 			dyheight();
 		}, 350);
 	}
-
-	setInterval(function() {
-		sp = document.getElementsByClassName('stack-pics');
-		ele = sp[0];
-		sp[0].remove();
-		document.getElementById('photo-stack').appendChild(ele);
-	}, 3000);
 
 
 	window.onload = function() {
