--- a/about.html
+++ b/about.html
@@ -116,7 +116,7 @@
 			<a href="#"><img src="images/logo.png" alt="Prerana Enterprises"></a>
 			<ul>
 				<li><a href="#"><i class="fas fa-home"></i> Home</a></li>
-				<li class="active" id="active"><a href="#"><i class="fas fa-file-contract"></i> About Us</a></li>
+				<li class="active" id="active"><a href="javascript: void(0)"><i class="fas fa-file-contract"></i> About Us</a></li>
 				<li><a href="#"><i class="fas fa-box-open"></i> Our Products</a></li>
 				<li><a href="#"><i class="far fa-address-card"></i> Contact Us</a></li>
 			</ul>
