--- a/contact.html
+++ b/contact.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Prerana Enterprises</title>
+	<title>Prerana Enterprises | About Us</title>
 
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<meta charset="UTF-8" />
@@ -11,7 +11,7 @@
 
 
 	<!--whatsapp and fb-->
-	<meta property="og:title" content="Prerana Enterprises" />
+	<meta property="og:title" content="Prerana Enterprises | About Us" />
 	<meta property="og:description" content="" />
 	<meta property="og:url" content="" />
 	<meta property="og:type" content="website" />
@@ -23,7 +23,7 @@
 
 	<!--twitter-->
 	<meta property="twitter:card" content="summary_large_image" />
-	<meta property="twitter:title" content="Prerana Enterprises" />
+	<meta property="twitter:title" content="Prerana Enterprises | About Us" />
 	<meta property="twitter:description" content="" />
 	<meta property="twitter:image" content="" />
 
@@ -54,23 +54,6 @@
 
 	<script type="text/javascript">
 		function dyheight() {
-			let hlist = document.getElementsByClassName('test');
-			max = hlist[0].clientHeight;
-			for(var i=1; i<hlist.length; i++)
-			{
-				if(hlist[i].clientHeight>max)
-				{
-					max=hlist[i].clientHeight;
-				}
-			}
-			for(var i=0; i<hlist.length; i++)
-			{
-				hlist[i].style.top = (max/2)+'px';
-				hlist[i].style.marginTop = (-hlist[i].clientHeight/2)+'px';
-			}
-			document.getElementById('t1').style.height = max+'px';
-
-			document.getElementById('photo-stack').style.height = (document.getElementById('stack-pics').clientHeight + 10)+'px';
 			document.getElementById('footer-image').style.width = document.getElementById('footer-image-div').offsetWidth+'px';
 			document.getElementById('footer-image-div').style.height = document.getElementById('footer-image').clientHeight+'px';
 			document.getElementById('footer-image-div').style.marginTop = ((document.getElementById('footer-3').offsetHeight - document.getElementById('footer-image').clientHeight)/2)+'px';
@@ -132,18 +115,12 @@
 			</label>
 			<a href="#"><img src="images/logo.png" alt="Prerana Enterprises"></a>
 			<ul>
-				<li class="active" id="active"><a href="javascript: void(0)"><i class="fas fa-home"></i> Home</a></li>
+				<li><a href="#"><i class="fas fa-home"></i> Home</a></li>
 				<li><a href="#"><i class="fas fa-file-contract"></i> About Us</a></li>
 				<li><a href="#"><i class="fas fa-box-open"></i> Our Products</a></li>
-				<li><a href="#"><i class="far fa-address-card"></i> Contact Us</a></li>
+				<li class="active" id="active"><a href="javascript: void(0)"><i class="far fa-address-card"></i> Contact Us</a></li>
 			</ul>
 		</nav>
-		<!--
-		<br>
-		<div class="text-center container">
-			<h1 class="banner-name"><b>PRERANA ENTERPRISES</b></h1>
-		</div>
-	-->
 
 	</div>
 
@@ -156,116 +133,65 @@
 	<div class="click text-center" onclick="slidein();" id="click">Contact Us</div>
 	<div class="bait" id="bait">Lorem<br>lorem<br>lorem<br>lorem</div>
 
-<h2 class="text-center subname pt-5 pb-md-5 pb-4" id="proud-client">Our Proud Clients</h2>
 
-<div class="proud pb-4">
-	<div class="t1" id="t1">
 
-		<div class="a1">
-			<img src="images/logo.png" class="test" alt="Prerana Enterprises" onload="dyheight();">
-			<img src="images/longlogo.jpg" class="test" alt="Prerana Enterprises" onload="dyheight();">
-			<img src="images/logo.png" class="test" alt="Prerana Enterprises" onload="dyheight();">
-			<img src="images/logo.png" class="test" alt="Prerana Enterprises" onload="dyheight();">
-		</div>
-		<div class="a2">
-			<img src="images/logo.png" class="test" alt="Prerana Enterprises" onload="dyheight();">
-			<img src="images/logo.png" class="test" alt="Prerana Enterprises" onload="dyheight();">
-			<img src="images/logo.png" class="test" alt="Prerana Enterprises" onload="dyheight();">
-			<img src="images/logo.png" class="test" alt="Prerana Enterprises" onload="dyheight();">
-		</div>
-		<div class="a3">
-			<img src="images/logo.png" class="test" alt="Prerana Enterprises" onload="dyheight();">
-			<img src="images/logo.png" class="test" alt="Prerana Enterprises" onload="dyheight();">
-			<img src="images/logo.png" class="test" alt="Prerana Enterprises" onload="dyheight();">
-			<img src="images/logo.png" class="test" alt="Prerana Enterprises" onload="dyheight();">
-		</div>
-		<div class="a4">
-			<img src="images/logo.png" class="test" alt="Prerana Enterprises" onload="dyheight();">
-			<img src="images/logo.png" class="test" alt="Prerana Enterprises" onload="dyheight();">
-			<img src="images/logo.png" class="test" alt="Prerana Enterprises" onload="dyheight();">
-			<img src="images/logo.png" class="test" alt="Prerana Enterprises" onload="dyheight();">
-		</div>
+<h2 class="text-center subname pt-3 pb-md-4 pb-4 mt-5">Contact Us</h2>
 
-	</div>
-	<div class="container text-right mt-md-5 mt-4"><p class="text-justify home-happy">We are happy to serve many more food, consumer goods and edible oil industries across Ratnagiri, Raigad, Panvel and Navi Mumbai.</p><a href="#" class="btn btn-primary review-btn">Read Reviews</a></div>
 
-</div>
-
-<h2 class="text-center subname pt-3 pb-md-4 pb-4">Our Primary Goals</h2>
-<div class="container home-goal pb-4 text-success">
+<div class="container contact-set">
 	<div class="row">
-		<div class="col-lg-6 col-12">
-			<div class="row">
-				<div class="col-1 text-right mx-0 px-0"><i class="fas fa-thumbs-up"></i></div>
-				<div class="col-11 text-justify pb-2">Provide high-quality, reliable corrugated boxes.</div>
-			</div>
-		</div>
-		<div class="col-lg-6 col-12">
-			<div class="row">
-				<div class="col-1 text-right mx-0 px-0"><i class="fas fa-rupee-sign"></i></div>
-				<div class="col-11 text-justify pb-2">Provide affordable solutions to clients.</div>
-			</div>
-		</div>
+		<div class="col-lg-6 col-sm-12">
+			<form class="ev_form" autocomplete="off">
+                <div class="form-group">
+                    <div class="form-required-show">
+                        <span class="form-required">* is for required.</span>
+                    </div>
+                    <label for="name">Name<span class="form-required"> *</span></label>
+                    <input type="text" id="name" class="form-control" placeholder="Enter Your Name" autocomplete="off" required></br>
+                    <label for="number">Mobile Number<span class="form-required"> *</span></label>
+                    <input type="tel" id="number" class="form-control" placeholder="Enter Your Mobile number" autocomplete="off" required>
+                	<small class="form-text text-muted"> We'll never share your mobile number with anyone else.</small>
+                	</br>
+                    <label for="email">Email Address</label>
+                    <input type="email" id="email" class="form-control" placeholder="Enter Your Email" autocomplete="off">
+                    <small class="form-text text-muted"> We'll never share your email with anyone else.</small>
+                    </br>
+                    <label for="message">Message</label><br>
+                    <textarea id="message" class="form-control txt-area" placeholder="Type your message here" autocomplete="off"></textarea>
+                    <br>
 
-		<div class="col-lg-6 col-12">
-			<div class="row">
-				<div class="col-1 text-right mx-0 px-0"><i class="fas fa-handshake"></i></div>
-				<div class="col-11 text-justify pb-2">Create and cultivate long-term relationship with clients.</div>
-			</div>
+
+                    <button class="btn btn-danger ev_btn " type="submit" name="sub_form">Submit</button>
+    
+
+                </div>
+            </form>
 		</div>
-		<div class="col-lg-6 col-12">
-			<div class="row">
-				<div class="col-1 text-right mx-0 px-0"><i class="fas fa-bolt"></i></div>
-				<div class="col-11 text-justify pb-2">Respond immediately to the changing needs of our clients.</div>
-			</div>
-		</div>
-		<div class="col-lg-6 col-12">
-			<div class="row">
-				<div class="col-1 text-right mx-0 px-0"><i class="fas fa-smile"></i></div>
-				<div class="col-11 text-justify pb-2">Achieve complete customer satisfaction.</div>
-			</div>
-		</div>
-		<div class="col-lg-6 col-12">
-			<div class="row">
-				<div class="col-1 text-right mx-0 px-0"><i class="fas fa-chart-line"></i></div>
-				<div class="col-11 text-justify pb-2">Improve our services continuously.</div>
-			</div>
-		</div>
-		<div class="col-lg-6 col-12">
-			<div class="row">
-				<div class="col-1 text-right mx-0 px-0"><i class="fas fa-comments"></i></div>
-				<div class="col-11 text-justify">Encourage communication to achieve the highest standard of performance.</div>
-			</div>
-		</div>
-		<div class="col-lg-6 col-12">
-			<div class="row">
-				<div class="col-1 text-right mx-0 px-0"><i class="far fa-question-circle"></i></div>
-				<div class="col-11 text-justify">Resolve all queries of customers.</div>
+		<div class="col-lg-6 col-sm-12">
+			<div class="contact-about">
+				<div class="contact-head"><i class="fas fa-mobile-alt contact-fa"></i> Mobile Number:</div>
+				<div class="contact-info">
+					<a href="tel:+" class="contact-call">+91 9999999999</a><br>
+					<a href="tel:+" class="contact-call">+91 9999999999</a><br>
+					<a href="https://wa.me/" class="btn btn-success btn-sm whatsapp-button">Click to Chat on WhatsApp</a><br>
+					<a href="#" class="btn btn-primary btn-sm whatsapp-button">Click to Call Us</a>
+				</div>
+				<div class="contact-head"><i class="far fa-envelope contact-fa"></i> Email Address:</div>
+				<div class="contact-info">email@gmail.com</div>
+				<div class="contact-head"><i class="fas fa-store-alt contact-fa"></i> Address:</div>
+				<div class="contact-info">Address... <br>Address...</div>
+				<div class="contact-info-special"><i class="fas fa-home contact-fa"></i> <b>If you live around our location...</b><br>You can also visit us at the above mentioned address to place your orders and have a look at our factory environment!<br>We would love meet you and discuss the orders across table.</div>
 			</div>
 		</div>
 	</div>
 </div>
 
 
-<h2 class="text-center subname pt-3 pb-md-5 pb-4">More About Us</h2>
 
-<div class="row home-product text-center pb-5">
-	<div class="col-md-5 col-12">
-		<div class='photo-stack' id="photo-stack">
-		  <img src='http://placekitten.com/300/200' class="stack-pics" id="stack-pics" onload="dyheight();">
-		  <img src='http://placekitten.com/300/200?image=2' class="stack-pics" id="stack-pics">
-		  <img src='http://placekitten.com/300/200?image=3' class="stack-pics">
-		  <img src='http://placekitten.com/300/200?image=4' class="stack-pics">
-		  <img src='http://placekitten.com/300/200?image=5' class="stack-pics">
-		</div>
-	</div>
-	<div class="col-md-7 col-12">
-		<div class="home-profile-info text-justify mr-md-4 ml-md-0 mx-3 pt-md-0 pt-2">
-			<p>Prerana Enterprises is an extremely innovative company that is always open to fresh ideas. We are always looking at new ways to improve our operations and the process.</p><p class="mb-2">We understand the challenges faced by our clients and assist them in developing the ideas that would work efficiently for their unique needs and would fit in with their budget.</p>
-			<div class="mr-sm-5 text-right mt-0"><a href="#" class="py-1 btn btn-dark home-profile-info">More About Us!</a></div>
-		</div>
-	</div>
-</div>
+
+
+
+
 
 
 <footer class="footer" id="full-footer">
@@ -294,7 +220,7 @@
 				<div class="col-lg-4 col-sm-6 col-12 pb-sm-0 pb-4">
 					<div class="ml-sm-3 ml-0 mb-3 footer-head text-sm-left text-center"><b>Reach Out To Us</b></div>
 					<div class="row footer-data">
-						<div class="col-sm-2 col-3 text-right"><i class="fas fa-store-alt"></i></i></div>
+						<div class="col-sm-2 col-3 text-right"><i class="fas fa-store-alt"></i></div>
 						<div class="col-sm-10 col-9 mb-3">Address.....<br>Address..... <br>Address.....<br>Address..... </div>
 					</div>
 					<div class="text-center text-lg-left pb-2">
@@ -380,13 +306,6 @@
 			dyheight();
 		}, 350);
 	}
-
-	setInterval(function() {
-		sp = document.getElementsByClassName('stack-pics');
-		ele = sp[0];
-		sp[0].remove();
-		document.getElementById('photo-stack').appendChild(ele);
-	}, 3000);
 
 
 	window.onload = function() {
