--- a/contact.html
+++ b/contact.html
@@ -135,7 +135,7 @@
 
 
 
-<h2 class="text-center subname pt-3 pb-md-4 pb-4 mt-5">Contact Us</h2>
+<h2 class="text-center subname pt-3 pb-md-4 pb-4 mt-5"><i class="far fa-comment"></i> Contact Us</h2>
 
 
 <div class="container contact-set">
