--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 	<div class="click text-center" onclick="slidein();" id="click">Contact Us</div>
 	<div class="bait" id="bait">Lorem<br>lorem<br>lorem<br>lorem</div>
 
-<h2 class="text-center subname pt-5 pb-md-5 pb-4" id="proud-client">Our Proud Clients</h2>
+<h2 class="text-center subname pt-5 pb-md-5 pb-4" id="proud-client"><i class="fas fa-network-wired icon-color"></i> Our Proud Clients</h2>
 
 <div class="proud pb-4">
 	<div class="t1" id="t1">
@@ -191,7 +191,7 @@
 
 </div>
 
-<h2 class="text-center subname pt-3 pb-md-4 pb-4">Our Primary Goals</h2>
+<h2 class="text-center subname pt-3 pb-md-4 pb-4"><i class="fas fa-crosshairs icon-color"></i> Our Primary Goals</h2>
 <div class="container home-goal pb-4 text-success">
 	<div class="row">
 		<div class="col-lg-6 col-12">
@@ -247,7 +247,7 @@
 </div>
 
 
-<h2 class="text-center subname pt-3 pb-md-5 pb-4">More About Us</h2>
+<h2 class="text-center subname pt-3 pb-md-5 pb-4"><i class="far fa-user-circle icon-color"></i> More About Us</h2>
 
 <div class="row home-product text-center pb-5">
 	<div class="col-md-5 col-12">
