--- a/about.html
+++ b/about.html
@@ -86,6 +86,8 @@
 				{
 					document.getElementById('full-footer').style.marginTop = (view_height - doc_height) + 'px';
 				}
+				else
+					document.getElementById('full-footer').style.marginTop = '0';
 			}, 30);
 		}
 
