--- a/contact.html
+++ b/contact.html
@@ -86,6 +86,8 @@
 				{
 					document.getElementById('full-footer').style.marginTop = (view_height - doc_height) + 'px';
 				}
+				else
+					document.getElementById('full-footer').style.marginTop = '0';
 			}, 30);
 		}
 
@@ -180,7 +182,7 @@
 				<div class="contact-info">email@gmail.com</div>
 				<div class="contact-head"><i class="fas fa-store-alt contact-fa"></i> Address:</div>
 				<div class="contact-info">Address... <br>Address...</div>
-				<div class="contact-info-special"><i class="fas fa-home contact-fa"></i> <b>If you live around our location...</b><br>You can also visit us at the above mentioned address to place your orders and have a look at our factory environment!<br>We would love meet you and discuss the orders across table.</div>
+				<div class="contact-info-special"><i class="fas fa-home contact-fa"></i> <b>If you live around our location...</b><br>You can also visit us at the above mentioned address to place your orders and have a look at our factory environment !<br>We would love meet you and discuss the orders across table.</div>
 			</div>
 		</div>
 	</div>
