--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
 			<h1 class="banner-title pt-5 text-white text-lg-center">
 				Corrugated Boxes Tailored to your Needs!
 			</h1>
-			<p class="banner-caption text-white text-lg-center pb-5 mb-0">We sell all types of corrugated boxes.</p>
+			<p class="banner-caption text-white text-lg-center pb-5 mb-0">We manufacture all types of corrugated boxes.</p>
 		</div>
 
 	</div>
