--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 		function navchange() {
 			if(window.scrollY>50)
 			{
-				document.getElementById('nav').style.background = 'rgba(255,255,255,0.95)';
+				document.getElementById('nav').style.background = 'rgba(255,255,255,0.97)';
 				let items = document.getElementsByClassName('navbar-item');
 				let i=0;
 				for(i=0;i<items.length;i++)
@@ -67,10 +67,19 @@
 					items[i].style.color = '#393185';
 				}
 				document.getElementById('bars').style.color = "#000";
+				document.getElementById('nav').style.height = '60px';
+				$("nav ul li").css("line-height","60px");
+				$("nav a img").css("height","50px");
+				$("nav a img").css("top","5px");
+				document.getElementsByClassName('banner')[0].style.minHeight = '0px';
 			}
 			else
 			{
 				document.getElementById('nav').style.background = 'transparent';
+				if(screen.height<830)
+				{
+					document.getElementsByClassName('banner')[0].style.minHeight = (screen.height)+'px';
+				}
 				if(screen.width>740)
 				{
 					let items = document.getElementsByClassName('navbar-item');
@@ -79,6 +88,10 @@
 					{
 						items[i].style.color = 'rgba(255,255,255,1)';
 					}
+					document.getElementById('nav').style.height = '70px';
+					$("nav ul li").css("line-height","70px");
+					$("nav a img").css("height","55px");
+					$("nav a img").css("top","10px");
 				}
 				else
 				{
@@ -88,28 +101,38 @@
 					{
 						items[i].style.color = '#393185';
 					}
+					document.getElementById('nav').style.height = '60px';
+					$("nav ul li").css("line-height","60px");
+					$("nav a img").css("height","50px");
+					$("nav a img").css("top","5px");
 				}
-				document.getElementById('bars').style.color = "#fff";	
+				document.getElementById('bars').style.color = "#fff";
 			}
 		}
 
 
 		function dyheight() {
-			let hlist = document.getElementsByClassName('test');
-			max = hlist[0].clientHeight;
-			for(var i=1; i<hlist.length; i++)
+
+
+			let plist = document.getElementsByClassName('img-client-home');
+			max = plist[0].clientHeight;
+			harray = [];
+			harray.push(plist[0].clientHeight);
+			for(var i=1; i<plist.length; i++)
 			{
-				if(hlist[i].clientHeight>max)
+				if(plist[i].clientHeight>max)
 				{
-					max=hlist[i].clientHeight;
+					max=plist[i].clientHeight;
 				}
+				harray.push(plist[i].clientHeight);
 			}
-			for(var i=0; i<hlist.length; i++)
+			for(var i=0; i<plist.length; i++)
 			{
-				hlist[i].style.top = (max/2)+'px';
-				hlist[i].style.marginTop = (-hlist[i].clientHeight/2)+'px';
+				plist[i].style.marginTop = '-'+(harray[i]/2)+'px';
+				plist[i].style.top = (max/2)+'px';
 			}
-			document.getElementById('t1').style.height = max+'px';
+			document.getElementById('img-strip').style.height = max+'px';
+
 
 			document.getElementById('photo-stack').style.height = (document.getElementById('stack-pics').clientHeight + 10)+'px';
 			document.getElementById('footer-image').style.width = document.getElementById('footer-image-div').offsetWidth+'px';
@@ -168,7 +191,7 @@
 </head>
 <body>
 
-	<div class="banner">
+	<div class="banner" id="banner">
 
 		<nav id="nav">
 			<input type="checkbox" id="check" onchange="black();">
@@ -187,8 +210,12 @@
 			<h1 class="banner-title pt-5 text-white text-lg-center">
 				Corrugated Boxes Tailored to your Needs!
 			</h1>
-			<p class="banner-caption text-white text-lg-center pb-5 mb-0">We manufacture all types of corrugated boxes.</p>
+			<div class="mx-auto width-changer banner-caption pb-0">
+				<p class="mb-lg-0"><i class="fas fa-boxes"></i> We manufacture all types of corrugated boxes.</p><p class="mb-0">Get products that are environment friendly!<ul class="banner-caption"><li><i class="fas fa-recycle"></i> Recyclable</li><li><i class="fab fa-envira"></i> Sustainable</li><li><i class="fas fa-users-cog"></i> Customisable</li></ul></p>
+			</div>
+			
 		</div>
+		<div class="container text-lg-right pt-2 pb-sm-4 pb-3 pl-lg-0 pl-5"><div class="mr-lg-5 pr-lg-5"><a href="#" class="mr-lg-5 btn btn-danger review-btn">View Products</a></div></div>
 
 	</div>
 
@@ -201,117 +228,151 @@
 	<div class="click text-center" onclick="slidein();" id="click">Contact Us</div>
 	<div class="bait" id="bait">Lorem<br>lorem<br>lorem<br>lorem</div>
 
-<h2 class="text-center subname pt-4 pb-md-5 pb-4" id="proud-client"><i class="fas fa-sitemap icon-color"></i> Our Proud Clients</h2>
 
-<div class="proud pb-4">
-	<div class="t1" id="t1">
+<div class="proudy">
+	<h2 class="text-center subname pt-4 pb-4 proud-client">Our Proud Clients</h2>
 
-		<div class="a1">
-			<img src="images/logo.png" class="test" alt="Prerana Enterprises" onload="dyheight();">
-			<img src="images/longlogo.jpg" class="test" alt="Prerana Enterprises" onload="dyheight();">
-			<img src="images/logo.png" class="test" alt="Prerana Enterprises" onload="dyheight();">
-			<img src="images/logo.png" class="test" alt="Prerana Enterprises" onload="dyheight();">
-		</div>
-		<div class="a2">
-			<img src="images/logo.png" class="test" alt="Prerana Enterprises" onload="dyheight();">
-			<img src="images/logo.png" class="test" alt="Prerana Enterprises" onload="dyheight();">
-			<img src="images/logo.png" class="test" alt="Prerana Enterprises" onload="dyheight();">
-			<img src="images/logo.png" class="test" alt="Prerana Enterprises" onload="dyheight();">
-		</div>
-		<div class="a3">
-			<img src="images/logo.png" class="test" alt="Prerana Enterprises" onload="dyheight();">
-			<img src="images/logo.png" class="test" alt="Prerana Enterprises" onload="dyheight();">
-			<img src="images/logo.png" class="test" alt="Prerana Enterprises" onload="dyheight();">
-			<img src="images/logo.png" class="test" alt="Prerana Enterprises" onload="dyheight();">
-		</div>
-		<div class="a4">
-			<img src="images/logo.png" class="test" alt="Prerana Enterprises" onload="dyheight();">
-			<img src="images/logo.png" class="test" alt="Prerana Enterprises" onload="dyheight();">
-			<img src="images/logo.png" class="test" alt="Prerana Enterprises" onload="dyheight();">
-			<img src="images/logo.png" class="test" alt="Prerana Enterprises" onload="dyheight();">
-		</div>
+	<div class="pb-4 pt-2">
 
-	</div>
-	<div class="container text-right mt-md-5 mt-4"><p class="text-justify home-happy">We are happy to serve many more food, consumer goods and edible oil industries across Ratnagiri, Raigad, Panvel and Navi Mumbai.</p><a href="#" class="btn btn-primary review-btn">Read Reviews</a></div>
-
-</div>
-
-
-
-
-
-<h2 class="text-center subname pt-3 pb-md-4 pb-4"><i class="fas fa-crosshairs icon-color"></i> Our Primary Goals</h2>
-<div class="container home-goal pb-4 text-success">
-	<div class="row">
-		<div class="col-lg-6 col-12">
-			<div class="row">
-				<div class="col-1 text-right mx-0 px-0"><i class="fas fa-thumbs-up"></i></div>
-				<div class="col-11 text-justify pb-2">Provide high-quality, reliable corrugated boxes.</div>
-			</div>
-		</div>
-		<div class="col-lg-6 col-12">
-			<div class="row">
-				<div class="col-1 text-right mx-0 px-0"><i class="fas fa-rupee-sign"></i></div>
-				<div class="col-11 text-justify pb-2">Provide affordable solutions to clients.</div>
+		<div class="client-strip py-4">
+		
+			<div class="img-strip" id="img-strip">
+				<div class="image-move"><img src="images/logo.png" class="img-client-home" alt="Prerana Enterprises" onload="dyheight();"></div>
+				<div class="image-move"><img src="images/logo.png" class="img-client-home" alt="Prerana Enterprises" onload="dyheight();"></div>
+				<div class="image-move"><img src="images/logo.png" class="img-client-home" alt="Prerana Enterprises" onload="dyheight();"></div>
+				<div class="image-move"><img src="images/logo.png" class="img-client-home" alt="Prerana Enterprises" onload="dyheight();"></div>
+				<div class="image-move"><img src="images/logo.png" class="img-client-home" alt="Prerana Enterprises" onload="dyheight();"></div>
+				<div class="image-move"><img src="images/logo.png" class="img-client-home" alt="Prerana Enterprises" onload="dyheight();"></div>
+				<div class="image-move"><img src="images/logo.png" class="img-client-home" alt="Prerana Enterprises" onload="dyheight();"></div>
 			</div>
 		</div>
 
-		<div class="col-lg-6 col-12">
-			<div class="row">
-				<div class="col-1 text-right mx-0 px-0"><i class="fas fa-handshake"></i></div>
-				<div class="col-11 text-justify pb-2">Create and cultivate long-term relationship with clients.</div>
-			</div>
-		</div>
-		<div class="col-lg-6 col-12">
-			<div class="row">
-				<div class="col-1 text-right mx-0 px-0"><i class="fas fa-bolt"></i></div>
-				<div class="col-11 text-justify pb-2">Respond immediately to the changing needs of our clients.</div>
-			</div>
-		</div>
-		<div class="col-lg-6 col-12">
-			<div class="row">
-				<div class="col-1 text-right mx-0 px-0"><i class="fas fa-smile"></i></div>
-				<div class="col-11 text-justify pb-2">Achieve complete customer satisfaction.</div>
-			</div>
-		</div>
-		<div class="col-lg-6 col-12">
-			<div class="row">
-				<div class="col-1 text-right mx-0 px-0"><i class="fas fa-chart-line"></i></div>
-				<div class="col-11 text-justify pb-2">Improve our services continuously.</div>
-			</div>
-		</div>
-		<div class="col-lg-6 col-12">
-			<div class="row">
-				<div class="col-1 text-right mx-0 px-0"><i class="fas fa-comments"></i></div>
-				<div class="col-11 text-justify">Encourage communication to achieve the highest standard of performance.</div>
-			</div>
-		</div>
-		<div class="col-lg-6 col-12">
-			<div class="row">
-				<div class="col-1 text-right mx-0 px-0"><i class="far fa-question-circle"></i></div>
-				<div class="col-11 text-justify">Resolve all queries of customers.</div>
-			</div>
-		</div>
+
+		<div class="container text-right mt-md-5 mt-4"><p class="text-justify home-happy">We are happy to serve many more food, consumer goods and edible oil industries across Ratnagiri, Raigad, Panvel and Navi Mumbai.</p><a href="#" class="btn btn-primary review-btn">Read Reviews</a></div>
+
 	</div>
 </div>
 
 
-<h2 class="text-center subname pt-3 pb-md-5 pb-4"><i class="far fa-user-circle icon-color"></i> More About Us</h2>
 
-<div class="row home-product text-center pb-5">
-	<div class="col-md-5 col-12">
-		<div class='photo-stack' id="photo-stack">
-		  <img src='http://placekitten.com/300/200' class="stack-pics" id="stack-pics" onload="dyheight();">
-		  <img src='http://placekitten.com/300/200?image=2' class="stack-pics" id="stack-pics">
-		  <img src='http://placekitten.com/300/200?image=3' class="stack-pics">
-		  <img src='http://placekitten.com/300/200?image=4' class="stack-pics">
-		  <img src='http://placekitten.com/300/200?image=5' class="stack-pics">
+
+
+<script type="text/javascript">
+	var iter_no = 0;
+	var left = 0;
+	var image_div = document.getElementsByClassName('image-move');
+	var n = image_div.length;
+	for(var i=0;i<n;i++)
+	{
+		image_div[i].style.left = left + '%';
+		left = left + 25;
+	}
+
+	setInterval(function() {
+		var order = [];
+		for(var i=0; i<n; i++)
+		{
+			order.push((i+iter_no)%n);
+		}
+
+		for(var i=0;i<n;i++)
+		{
+			let left_value = image_div[i].style.left;
+			left_value = parseInt(left_value, 10);
+			left_value = left_value - 25;
+			image_div[i].style.left = left_value + '%';
+		}
+
+		setTimeout(function() {
+			image_div[order[0]].style.display = 'none';
+			image_div[order[0]].style.left = (25*(n-1))+'%';
+			setTimeout(function() {image_div[order[0]].style.display = 'initial';}, 1200);
+		}, 1200);
+
+		iter_no++;
+	}, 3000);
+
+
+
+</script>
+
+
+
+<div class="home-goals">
+	<h2 class="text-center subname pt-3 pb-md-4 pb-4 text-white">Our Primary Goals</h2>
+	<div class="container home-goal pb-4">
+		<div class="row">
+			<div class="col-lg-6 col-12">
+				<div class="row">
+					<div class="col-1 text-right mx-0 px-0"><i class="fas fa-thumbs-up"></i></div>
+					<div class="col-11 text-justify pb-2">Provide high-quality, reliable corrugated boxes.</div>
+				</div>
+			</div>
+			<div class="col-lg-6 col-12">
+				<div class="row">
+					<div class="col-1 text-right mx-0 px-0"><i class="fas fa-rupee-sign"></i></div>
+					<div class="col-11 text-justify pb-2">Provide affordable solutions to clients.</div>
+				</div>
+			</div>
+
+			<div class="col-lg-6 col-12">
+				<div class="row">
+					<div class="col-1 text-right mx-0 px-0"><i class="fas fa-handshake"></i></div>
+					<div class="col-11 text-justify pb-2">Create and cultivate long-term relationship with clients.</div>
+				</div>
+			</div>
+			<div class="col-lg-6 col-12">
+				<div class="row">
+					<div class="col-1 text-right mx-0 px-0"><i class="fas fa-bolt"></i></div>
+					<div class="col-11 text-justify pb-2">Respond immediately to the changing needs of our clients.</div>
+				</div>
+			</div>
+			<div class="col-lg-6 col-12">
+				<div class="row">
+					<div class="col-1 text-right mx-0 px-0"><i class="fas fa-smile"></i></div>
+					<div class="col-11 text-justify pb-2">Achieve complete customer satisfaction.</div>
+				</div>
+			</div>
+			<div class="col-lg-6 col-12">
+				<div class="row">
+					<div class="col-1 text-right mx-0 px-0"><i class="fas fa-chart-line"></i></div>
+					<div class="col-11 text-justify pb-2">Improve our services continuously.</div>
+				</div>
+			</div>
+			<div class="col-lg-6 col-12">
+				<div class="row">
+					<div class="col-1 text-right mx-0 px-0"><i class="fas fa-comments"></i></div>
+					<div class="col-11 text-justify">Encourage communication to achieve the highest standard of performance.</div>
+				</div>
+			</div>
+			<div class="col-lg-6 col-12">
+				<div class="row">
+					<div class="col-1 text-right mx-0 px-0"><i class="far fa-question-circle"></i></div>
+					<div class="col-11 text-justify">Resolve all queries of customers.</div>
+				</div>
+			</div>
 		</div>
 	</div>
-	<div class="col-md-7 col-12">
-		<div class="home-profile-info text-justify mr-md-4 ml-md-0 mx-3 pt-md-0 pt-2">
-			<p>Prerana Enterprises is an extremely innovative company that is always open to fresh ideas. We are always looking at new ways to improve our operations and the process.</p><p class="mb-2">We understand the challenges faced by our clients and assist them in developing the ideas that would work efficiently for their unique needs and would fit in with their budget.</p>
-			<div class="mr-sm-5 text-right mt-0"><a href="#" class="py-1 btn btn-dark home-profile-info">More About Us!</a></div>
+</div>
+
+<div class="aboutus-bg">
+	<h2 class="text-center subname pt-3 pb-md-5 pb-4">More About Us</h2>
+
+	<div class="row home-product text-center pb-5">
+		<div class="col-md-5 col-12">
+			<div class='photo-stack' id="photo-stack">
+			  <img src='http://placekitten.com/300/200' class="stack-pics" id="stack-pics" onload="dyheight();">
+			  <img src='http://placekitten.com/300/200?image=2' class="stack-pics" id="stack-pics">
+			  <img src='http://placekitten.com/300/200?image=3' class="stack-pics">
+			  <img src='http://placekitten.com/300/200?image=4' class="stack-pics">
+			  <img src='http://placekitten.com/300/200?image=5' class="stack-pics">
+			</div>
+		</div>
+		<div class="col-md-7 col-12">
+			<div class="home-profile-info text-justify mr-md-4 ml-md-0 mx-3 pt-md-0 pt-2">
+				<p>Prerana Enterprises is an extremely innovative company that is always open to fresh ideas. We are always looking at new ways to improve our operations and the process.</p><p class="mb-2">We understand the challenges faced by our clients and assist them in developing the ideas that would work efficiently for their unique needs and would fit in with their budget.</p>
+				<div class="mr-sm-5 text-right mt-0"><a href="#" class="py-1 btn btn-dark home-profile-info">More About Us!</a></div>
+			</div>
 		</div>
 	</div>
 </div>
@@ -371,10 +432,49 @@
 
 
 <script type="text/javascript">
+
+	if(window.scrollY>50)
+	{
+		document.getElementById('nav').style.background = 'rgba(255,255,255,0.97)';
+		let items = document.getElementsByClassName('navbar-item');
+		let i=0;
+		for(i=0;i<items.length;i++)
+		{
+			items[i].style.color = '#393185';
+		}
+		document.getElementById('bars').style.color = "#000";
+		document.getElementById('nav').style.height = '60px';
+		$("nav ul li").css("line-height","60px");
+		$("nav a img").css("height","50px");
+		$("nav a img").css("top","5px");
+	}
+	else if(screen.width<740)
+	{
+		if(screen.height<830)
+		{
+			document.getElementsByClassName('banner')[0].style.minHeight = (screen.height)+'px';
+		}
+		document.getElementById('nav').style.height = '60px';
+		$("nav ul li").css("line-height","60px");
+		$("nav a img").css("height","50px");
+		$("nav a img").css("top","5px");
+	}
+	else
+	{
+		if(screen.height<830)
+		{
+			document.getElementsByClassName('banner')[0].style.minHeight = (screen.height)+'px';
+		}
+		document.getElementById('nav').style.height = '70px';
+		$("nav a img").css("top","10px");
+		$("nav a img").css("height","55px");
+	}
 	
 	$("nav ul li").hover(function() {
 		if(screen.width>740 && window.scrollY<50)
-		$("nav ul li a").css("color","#fff");
+		{
+			$("nav ul li a").css("color","#fff");
+		}
 	});
 
 
@@ -435,7 +535,7 @@
 
 		setTimeout(function() {
 			dyheight();
-		}, 350);
+		}, 1100);
 	}
 
 	setInterval(function() {
