--- a/index.html
+++ b/index.html
@@ -433,6 +433,9 @@
 
 <script type="text/javascript">
 
+
+	setTimeout(function() {window.scroll(0,60)}, 3000);
+
 	if(window.scrollY>50)
 	{
 		document.getElementById('nav').style.background = 'rgba(255,255,255,0.97)';
