--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
 <script type="text/javascript">
 
 
-	setTimeout(function() {window.scroll(0,60)}, 3000);
+	setTimeout(function() {if(screen.height<830){window.scroll(0,60)}}, 3000);
 
 	if(window.scrollY>50)
 	{
