--- a/index.html
+++ b/index.html
@@ -433,6 +433,9 @@
 
 <script type="text/javascript">
 
+	alert(screen.width);
+	alert(screen.height);
+
 
 	setTimeout(function() {if(screen.height<830){window.scroll(0,60)}}, 3000);
 
