--- a/contact.html
+++ b/contact.html
@@ -367,7 +367,8 @@
 	}
 
 	alert(window.innerHeight);
-	alert(window.innerWidth);
+	setTimeout(function() {alert(window.innerWidth);}, 2200);
+	
 
 
 
