--- a/products.html
+++ b/products.html
@@ -176,7 +176,7 @@
 				<li><a class="navbar-item" href="index.html"><i class="fas fa-home"></i> Home</a></li>
 				<li><a class="navbar-item" href="about.html"><i class="fas fa-file-contract"></i> About Us</a></li>
 				<li class="active" id="active"><a class="navbar-item" href="javascript: void(0)"><i class="fas fa-box-open"></i> Our Products</a></li>
-				<li><a class="navbar-item" href="contact.html"><i class="far fa-address-card"></i> Contact Us</a></li>
+				<li><a class="navbar-item" href="contact.html"><i class="fas fa-address-card"></i> Contact Us</a></li>
 			</ul>
 		</nav>
 
