--- a/contact.html
+++ b/contact.html
@@ -216,7 +216,7 @@
 						<div class="contact-info">
 							<a href="tel:+" class="contact-call">+91 9999999999</a><br>
 							<a href="tel:+" class="contact-call">+91 9999999999</a><br>
-							<a href="https://wa.me/" class="btn btn-success btn-sm whatsapp-button mt-lg-3">Click to Chat on WhatsApp</a><br>
+							<a href="#" class="btn btn-success btn-sm whatsapp-button mt-lg-3">Click to Chat on WhatsApp</a><br>
 							<a href="#" class="btn btn-primary btn-sm whatsapp-button mt-lg-3">Click to Call Us</a>
 						</div>
 					</div>
