--- a/about.html
+++ b/about.html
@@ -368,8 +368,7 @@
 
 	window.onload = function() {
 		page_height();
-		boom();
-		setTimeout(function() {page_height();}, 2200);
+		setTimeout(function() {page_height();console.log(1);}, 3200);
 	};
 
 		
